fix: restaurant finder div center alignment issue

--- a/src/components/restaurant-finder/Restaurant-finder.scss
+++ b/src/components/restaurant-finder/Restaurant-finder.scss
@@ -3,7 +3,7 @@
   max-width: 700px;
   padding: 50px 15px;
   align-items: center;
-
+  margin: 0 auto;
   .alter-text {
     width: 50px;
     text-align: center;
